# atlas

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  RASP.md  STARTUP.md  docker-compose.yml  pyproject.toml
.githooks/: commit-msg
.github/workflows/: ci.yml  release.yml
docs/: README.md  atlas-arquitetura.md  glossario.md
docs/agentes/: README.md  dev.md  diretrizes-gerais.md  revisor-curador.md  tech-lead.md
manifests/: academia.yaml  produtividade.yaml  saude.yaml
resumo/: README.md  atlas-dev.service  raspberry-pi.md
scripts/: atlas-deploy.service  atlas-deploy.sh  atlas-deploy.timer  atlas.service  atlasctl.sh  deploy.sh  docker-run.sh  handoff-snapshot.sh  keep-awake.sh  migrate_routine_to_job.py  podman-dev.sh  rotate_secret_key.py
src/atlas/: api.py  (+39 more)
tests/: conftest.py  repohelpers.py  test_agent_hardening.py  test_agente_ollama.py  test_alarmes.py  test_aliases.py  test_api.py  test_api_auth.py  test_api_github.py  test_api_schema.py  test_api_scoping.py  test_api_self_restart.py  test_app.py  test_apply.py  test_barreira.py  test_checkin.py  test_checkup_semanal.py  test_coletar_por_label.py  test_comandos.py  test_comandos_repo.py  test_config.py  test_controle.py  test_controle_set.py  test_core_resource.py  test_core_store.py  test_credentials.py  test_curadoria.py  test_db.py  test_docs_cmd.py  test_executor.py  test_github_auth.py  test_handler.py  test_handler_pool.py  test_harness.py  test_ia.py  test_idea_kind.py  test_integration.py  test_keepawake.py  test_label_selectors.py  test_manifests.py  (+30 more)
web/: package-lock.json  package.json
(+264 files in other folders)
