[project]
name = "atlas"
version = "0.0.0"
description = "Atlas — motor de rotinas pessoais"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-cov"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
extend-exclude = [".claude", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
