[project]
name = "atlas"
version = "0.1.0"
description = "Atlas — motor de rotinas pessoais"
requires-python = ">=3.12"
dependencies = ["pyyaml>=6", "cryptography>=42", "pymupdf>=1.24"]

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-cov"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
extend-exclude = [".claude", ".venv", "repos", "web"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# api.py tem CSS/HTML/JS minificado inline — linhas longas são inevitáveis
per-file-ignores = {"src/atlas/api.py" = ["E501"]}

[tool.pytest.ini_options]
testpaths = ["tests"]
# "." põe a raiz no sys.path → `from tests.repohelpers import ...` funciona sob o
# `pytest` puro do CI (não só com `python -m pytest`).
pythonpath = ["src", "."]
addopts = "-q"
